# proyecto-final-2025-2-promasg

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
pong_ai/: CMakeLists.txt
pong_ai/examples/: example_usage.cpp
pong_ai/include/utec/algebra/: Tensor.h
pong_ai/include/utec/apps/: ControllerDemo.h  PatternClassifier.h  SequencePredictor.h
pong_ai/include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
pong_ai/src/: main.cpp
pong_ai/src/utec/apps/: ControllerDemo.cpp  ControllerDemo.cpp.bak  PatternClassifier.cpp  PatternClassifier.cpp.bak  SequencePredictor.cpp  SequencePredictor.cpp.bak
pong_ai/tests/: test_applications.cpp  test_neural_network.cpp  test_tensor.cpp
